--- a/src/layouts/index.module.sass
+++ b/src/layouts/index.module.sass
@@ -4,6 +4,13 @@ body
   font-size: 16px
   font-weight: 300
 
+
+
+h1
+  margin: 0
+  font-size: 3rem
+
+
 a
   text-decoration: none
   color: inherit
