--- a/src/layouts/index.module.sass
+++ b/src/layouts/index.module.sass
@@ -11,6 +11,25 @@ h1
   font-size: 3rem
 
 
+h2
+  margin: 0
+  font-size: 4.5rem
+  font-weight: 400
+  line-height: 0.9
+
+
+h3
+  margin: 0
+  font-size: 1.5rem
+  font-weight: 400
+
+
+h4
+  margin: 0
+  font-size: 1.25rem
+  font-weight: 400
+
+
 a
   text-decoration: none
   color: inherit
