Index page: update hero, add footer

--- a/src/components/Hero/Hero.module.sass
+++ b/src/components/Hero/Hero.module.sass
@@ -1,22 +1,21 @@
 @import '../../shared/variables/colors'
 
 
-.hero
+.root
   box-sizing: border-box
-  height: calc(100vh - 150px)
-  padding-top: 200px
-  background-color: $primary-color
+  height: calc(100vh - 341px)
 
 
 .inner
-  padding: 0 20px
+  max-width: 700px
+  padding-left: 140px
+  padding-right: 20px
   margin: 0 auto
 
 
-.tagline
-  padding: 0 30px
-  border-left: 8px solid $secondary-color
-  margin-left: 100px
+.content
+  padding-top: 100px
+  padding-right: 100px
 
 
 .headingLight
@@ -32,18 +31,11 @@
 
 
 .subheading
-  margin: 0
-  font-weight: 400
-  text-transform: uppercase
+  margin-top: 0
+  margin-bottom: 1em
+  font-size: 1.25rem
 
 
-.socialList
-  list-style-type: none
-  padding: 0
-  margin-top: 50px
-
-
-.social
-  display: inline-block
-  margin-right: 20px
-  font-size: 1.25em
+.link
+  color: $brand-color
+  text-decoration: underline
