--- a/src/components/Header/Header.module.sass
+++ b/src/components/Header/Header.module.sass
@@ -1,14 +1,16 @@
 @import '../../shared/variables/colors'
 
 
-.header
-  background-color: $primary-color
-
-
 .inner
-  display: flex
-  padding: 50px 20px 0
+  max-width: 820px
+  padding-left: 20px
+  padding-right: 20px
   margin: 0 auto
+
+
+.content
+  display: flex
+  padding-top: 60px
 
 
 .siteLogo
@@ -27,7 +29,7 @@
 
 
 .navItem
-  margin: 0 20px
+  margin: 0 15px
   padding-bottom: 10px
   font-weight: 400
   line-height: 24px
