--- a/src/layouts/index.module.sass
+++ b/src/layouts/index.module.sass
@@ -7,8 +7,10 @@ body
 
 
 h1
-  margin: 0
-  font-size: 3rem
+  margin-top: 0
+  margin-bottom: 20px
+  font-size: 2.5rem
+  font-weight: 600
 
 
 h2
