Learn page: add projects of learning assignments

--- a/src/components/Navigation/Navigation.module.sass
+++ b/src/components/Navigation/Navigation.module.sass
@@ -1,11 +1,20 @@
 @import '../../shared/variables/colors'
 
 
-.inner
-  display: flex
-  padding: 60px 20px 20px
-  margin: 0 auto
+.root
   background: linear-gradient(to right, $brand-color, rgba($brand-color, 0.8))
+
+
+.inner
+  max-width: 860px
+  padding: 0 20px
+  margin: 0 auto
+
+
+.content
+  display: flex
+  padding-top: 60px
+  padding-bottom: 20px
   color: #fff
 
 
