--- a/src/components/Main/Main.module.sass
+++ b/src/components/Main/Main.module.sass
@@ -2,6 +2,7 @@
 
 
 .inner
+  max-width: 860px
   padding: 0 20px
   margin: 0 auto
 
@@ -17,8 +18,11 @@
 
 
 .aside
-  width: 100px
+  flex: 0 0 100px
   margin-right: 60px
+
+
+.main
 
 
 .header
@@ -29,8 +33,61 @@
   font-size: 14px
 
 
-
 .body
   margin-top: 0
   margin-bottom: 10px
   line-height: 1.5
+
+
+.projectList
+  display: flex
+  flex-wrap: wrap
+  margin-top: 40px
+
+
+.project
+  position: relative
+  width: 49%
+  margin-left: 1%
+  margin-right: 1%
+  margin-bottom: 2%
+  cursor: pointer
+
+  &:nth-of-type(2n + 1)
+    margin-left: 0
+
+  &:nth-of-type(2n)
+    margin-right: 0
+
+
+.figure
+  margin: 0
+  z-index: 1
+
+
+.image
+  display: block
+  width: 100%
+  height: auto
+
+
+.description
+  position: absolute
+  top: 0
+  left: 0
+  right: 0
+  bottom: 0
+  display: flex
+  flex-direction: column
+  padding: 20px
+  background-color: $brand-color
+  color: #fff
+  opacity: 0
+  transition: opacity 0.2s
+
+  .project:hover &
+    opacity: 1
+
+
+.title
+  margin-bottom: 10px
