--- a/src/components/Header/Header.module.sass
+++ b/src/components/Header/Header.module.sass
@@ -2,7 +2,7 @@
 
 
 .inner
-  max-width: 820px
+  max-width: 860px
   padding-left: 20px
   padding-right: 20px
   margin: 0 auto
@@ -13,27 +13,15 @@
   padding-top: 60px
 
 
-.siteLogo
-  width: 100px
-  height: 100px
-  border-radius: 50%
-  background:
-    color: $brand-color
-    image: url('../../../logo.jpg')
-    size: cover
-    repeat: no-repeat
-
-
 .nav
   margin-left: auto
 
 
 .navItem
-  margin: 0 15px
+  margin-left: 20px
   padding-bottom: 10px
   font-weight: 400
   line-height: 24px
-  color: $primary-text-color
 
   &:hover
     border-bottom: 4px solid $brand-color
