--- a/src/components/Hero/Hero.module.sass
+++ b/src/components/Hero/Hero.module.sass
@@ -3,38 +3,37 @@
 
 .root
   box-sizing: border-box
-  height: calc(100vh - 341px)
 
 
 .inner
-  max-width: 700px
-  padding-left: 140px
+  max-width: 860px
+  padding-left: 20px
   padding-right: 20px
   margin: 0 auto
 
 
 .content
-  padding-top: 100px
-  padding-right: 100px
+  padding-top: 60px
+  padding-left: 0
+  padding-right: 0
+  padding-bottom: 60px
 
+  @media (min-width: 580px)
+    padding-left: 100px
+    padding-bottom: 100px
+    padding-right: 100px
 
-.headingLight
-  display: inline-block
-  height: 48px
-  font-weight: 300
-  text-transform: uppercase
-
-
-.headingBold
-  text-transform: uppercase
-  color: $brand-color
+  @media (min-width: 680px)
+    padding-left: 160px
 
 
 .subheading
   margin-top: 0
   margin-bottom: 1em
-  font-size: 1.25rem
+  font-size: 1.1rem
 
+  @media (min-width: 580px)
+    font-size: 1.25rem
 
 .link
   color: $brand-color
