--- a/src/layouts/index.module.sass
+++ b/src/layouts/index.module.sass
@@ -9,8 +9,11 @@ body
 h1
   margin-top: 0
   margin-bottom: 20px
-  font-size: 2.5rem
+  font-size: 2rem
   font-weight: 600
+
+  @media (min-width: 680px)
+    font-size: 2.5rem
 
 
 h2
