--- a/src/components/Header/Header.module.sass
+++ b/src/components/Header/Header.module.sass
@@ -17,9 +17,101 @@
   margin-left: auto
 
 
-.navItem
+.toggleState
+  display: none
+
+
+.menu
+  position: relative
+  display: block
+  width: 20px
+  height: 14px
+  padding: 5px
+  cursor: pointer
+
+  @media (min-width: 580px)
+    display: none
+
+
+.menuBread
+  position: absolute
+  left: 5px
+  right: 5px
+  height: 2px
+  background-color: #000
+  transform: rotate(0deg)
+  transition: 0.2s
+
+  &:nth-child(1)
+    top: 5px
+
+    .toggleState:checked ~ .menu &
+      top: 11px
+      left: 50%
+      right: 50%
+
+  &:nth-child(2)
+    top: 11px
+
+    .toggleState:checked ~ .menu &
+      transform: rotate(45deg)
+
+  &:nth-child(3)
+    top: 11px
+
+    .toggleState:checked ~ .menu &
+      transform: rotate(-45deg)
+
+  &:nth-child(4)
+    bottom: 5px
+
+    .toggleState:checked ~ .menu &
+      top: 11px
+      left: 50%
+      right: 50%
+
+
+.list
+  list-style-type: none
+  position: absolute
+  z-index: 1
+  top: 130px
+  right: 0
+  bottom: 0
+  left: 0
+  padding: 0
+  padding-top: 60px
+  margin: 0
+  text-align: center
+  background-color: #fff
+  visibility: hidden
+  opacity: 0
+  transition: opacity 0.2s ease-in-out
+
+  .toggleState:checked ~ &
+    visibility: visible
+    opacity: 1
+
+  @media (min-width: 580px)
+    position: static
+    padding-top: 0
+    visibility: visible
+    opacity: 1
+
+
+.listItem
+  display: inline-block
+
+  .toggleState:checked ~ .list &
+    display: block
+    margin-bottom: 1.5em
+
+
+.link
+  display: inline-block
   margin-left: 20px
   padding-bottom: 10px
+  border-bottom: 4px solid transparent
   font-weight: 400
   line-height: 24px
 
