--- a/src/components/Header/Header.module.sass
+++ b/src/components/Header/Header.module.sass
@@ -101,6 +101,7 @@
 
 .listItem
   display: inline-block
+  user-select: none
 
   .toggleState:checked ~ .list &
     display: block
@@ -112,8 +113,10 @@
   margin-left: 20px
   padding-bottom: 10px
   border-bottom: 4px solid transparent
+  font-size: 14px
   font-weight: 400
   line-height: 24px
+  text-transform: uppercase
 
   &:hover
     border-bottom: 4px solid $brand-color
