--- a/src/components/ProjectList/ProjectList.module.sass
+++ b/src/components/ProjectList/ProjectList.module.sass
@@ -4,16 +4,20 @@
 .root
   display: flex
   flex-wrap: wrap
-  margin-top: 40px
+  margin-top: 20px
 
 
 .project
   position: relative
-  width: 49%
-  margin-left: 1%
-  margin-right: 1%
-  margin-bottom: 2%
+  width: 100%
+  margin-bottom: 20px
   cursor: pointer
+
+  @media (min-width: 580px)
+    width: 49%
+    margin-left: 1%
+    margin-right: 1%
+    margin-bottom: 2%
 
   &:nth-of-type(2n + 1)
     margin-left: 0
