--- a/src/layouts/index.module.sass
+++ b/src/layouts/index.module.sass
@@ -1,16 +1,20 @@
+@import '../shared/variables/colors'
+
+
 body
   margin: 0
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"
   font-size: 16px
   font-weight: 300
-
+  background-color: #FFF
+  color: $primary-text-color
 
 
 h1
   margin-top: 0
   margin-bottom: 20px
   font-size: 2rem
-  font-weight: 600
+  font-weight: 400
 
   @media (min-width: 680px)
     font-size: 2.5rem
@@ -18,9 +22,12 @@ h1
 
 h2
   margin: 0
-  font-size: 4.5rem
+  font-size: 2.75rem
   font-weight: 400
   line-height: 0.9
+
+  @media (min-width: 580px)
+    font-size: 4.5rem
 
 
 h3
@@ -30,8 +37,18 @@ h3
 
 
 h4
-  margin: 0
+  margin-top: 0
+  margin-bottom: 20px
   font-size: 1.25rem
+  font-weight: 400
+
+  @media (min-width: 680px)
+    font-size: 1.5rem
+
+
+h5
+  margin: 0
+  font-size: 1rem
   font-weight: 400
 
 
