--- a/src/shared/variables/_colors.sass
+++ b/src/shared/variables/_colors.sass
@@ -1,4 +1,5 @@
 $brand-color: #4990E2
 $primary-color: #F6F6F6
-$secondary-color: #D8D8D8
-$primary-text-color: #4A4A4A
+$secondary-color: #E8E8E8
+$primary-text-color: #000
+$secondary-text-color: #B5B5B5
