--- a/src/components/PageContent/PageContent.module.sass
+++ b/src/components/PageContent/PageContent.module.sass
@@ -7,7 +7,7 @@
   margin: 0 auto
 
 
-.mainSection
+.contentItem
   display: flex
   flex-direction: column
   padding-top: 60px
@@ -21,20 +21,17 @@
     flex-direction: row
 
 
-.subSection
+.contentBlock
   &:not(:last-child)
     margin-bottom: 40px
 
 
-.aside
+.contentSub
   margin-right: 60px
 
   @media (min-width: 680px)
     flex: 0 0 100px
     text-align: center
-
-
-.main
 
 
 .header
@@ -44,11 +41,6 @@
 .subheading
   font-size: 14px
 
-
-.body
-  margin-top: 0
-  margin-bottom: 10px
-  line-height: 1.5
 
 
 .cert
