--- a/src/layouts/index.module.sass
+++ b/src/layouts/index.module.sass
@@ -47,11 +47,24 @@ h4
 
 
 h5
-  margin: 0
+  margin-top: 0
+  margin-bottom: 20px
   font-size: 1rem
   font-weight: 400
+
+
+p
+  margin-top: 0
+  margin-bottom: 10px
+  line-height: 1.5
 
 
 a
   text-decoration: none
   color: inherit
+
+
+img
+  display: block
+  width: 100%
+  height: auto
