Add create-page, page that shows all works

--- a/src/components/Header/Header.module.sass
+++ b/src/components/Header/Header.module.sass
@@ -114,9 +114,10 @@
   padding-bottom: 10px
   border-bottom: 4px solid transparent
   font-size: 14px
-  font-weight: 400
+  font-weight: 500
   line-height: 24px
   text-transform: uppercase
+  color: $primary-text-color
 
   &:hover
     border-bottom: 4px solid $brand-color
