--- a/src/components/Navigation/Navigation.module.sass
+++ b/src/components/Navigation/Navigation.module.sass
@@ -52,8 +52,9 @@
 
 .link
   margin-right: 20px
+  border-bottom: 0
   font-size: 0.875rem
-  font-weight: 400
+  font-weight: 500
   line-height: 1.25
   text-transform: uppercase
   transition: all 0.25s
