Add reflect-page, for writing stuff

--- a/src/layouts/index.module.sass
+++ b/src/layouts/index.module.sass
@@ -55,14 +55,38 @@ h5
 
 p
   margin-top: 0
-  margin-bottom: 10px
+  margin-bottom: 20px
   line-height: 1.5
 
 
+code
+  color: #657b83
+  font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace
+  font-size: 85%
+  text-align: left
+  white-space: pre
+  word-spacing: normal
+  word-break: normal
+  word-wrap: normal
+
+  line-height: 1.5
+
+  -moz-tab-size: 4
+  -o-tab-size: 4
+  tab-size: 4
+
+  -webkit-hyphens: none
+  -moz-hyphens: none
+  -ms-hyphens: none
+  hyphens: none
+  padding: 0.1em
+  border-radius: .3em
+  background-color: #fdf6e3
+
+
 a
-  border-bottom: 1px dashed $brand-color
   text-decoration: none
-  color: $brand-color
+  color: inherit
 
 
 img
