--- a/src/components/PageContent/PageContent.module.sass
+++ b/src/components/PageContent/PageContent.module.sass
@@ -24,8 +24,15 @@
 
 
 .contentBlock
+  width: 100%
+
   &:not(:last-child)
     margin-bottom: 40px
+
+
+.contentMain
+  @media (min-width: 680px)
+    width: calc(100% - 160px)
 
 
 .contentSub
@@ -34,52 +41,3 @@
   @media (min-width: 680px)
     flex: 0 0 100px
     text-align: center
-
-
-.header
-  margin-bottom: 40px
-
-
-.subheading
-  font-size: 14px
-
-
-
-.cert
-  display: block
-  width: 100%
-  height: auto
-  margin-top: 20px
-
-
-.figure
-  margin: 0
-  z-index: 1
-
-
-.image
-  display: block
-  width: 100%
-  height: auto
-
-
-.description
-  position: absolute
-  top: 0
-  left: 0
-  right: 0
-  bottom: 0
-  display: flex
-  flex-direction: column
-  padding: 20px
-  background-color: $brand-color
-  color: #fff
-  opacity: 0
-  transition: opacity 0.2s
-
-  .project:hover &
-    opacity: 1
-
-
-.title
-  margin-bottom: 10px
