Refactor Hero component and 404 page

--- a/src/components/Hero/Hero.module.sass
+++ b/src/components/Hero/Hero.module.sass
@@ -27,9 +27,7 @@
     padding-left: 160px
 
 
-.subheading
-  margin-top: 0
-  margin-bottom: 1em
+.textBlock
   font-size: 1.1rem
 
   @media (min-width: 580px)
