--- a/src/layouts/index.module.sass
+++ b/src/layouts/index.module.sass
@@ -10,11 +10,17 @@ body
   color: $primary-text-color
 
 
+::selection
+  background-color: $brand-color
+  color: #fff
+
+
 h1
   margin-top: 0
   margin-bottom: 20px
+  font-family: 'Playfair Display', serif
   font-size: 2rem
-  font-weight: 400
+  font-weight: 700
 
   @media (min-width: 680px)
     font-size: 2.5rem
@@ -22,9 +28,12 @@ h1
 
 h2
   margin: 0
-  font-size: 2.75rem
-  font-weight: 400
+  font-size: 2rem
+  font-weight: 500
   line-height: 0.9
+
+  @media (min-width: 380px)
+    font-size: 2.75rem
 
   @media (min-width: 580px)
     font-size: 4.5rem
@@ -33,7 +42,7 @@ h2
 h3
   margin: 0
   font-size: 1.5rem
-  font-weight: 400
+  font-weight: 600
 
 
 h4
@@ -49,8 +58,8 @@ h4
 h5
   margin-top: 0
   margin-bottom: 20px
-  font-size: 1rem
-  font-weight: 400
+  font-size: 1.15rem
+  font-weight: 600
 
 
 p
@@ -85,8 +94,9 @@ code
 
 
 a
+  border-bottom: 1px dashed $brand-color
   text-decoration: none
-  color: inherit
+  color: $brand-color
 
 
 img
